--- a/angular.json
+++ b/angular.json
@@ -22,7 +22,7 @@
                 "input": "public"
               }
             ],
-            "styles": ["src/styles.css", "node_modules/primeflex/primeflex.css"]
+            "styles": ["src/styles.css"]
           },
           "configurations": {
             "production": {
@@ -80,7 +80,7 @@
                 "input": "public"
               }
             ],
-            "styles": ["src/styles.css", "node_modules/primeflex/primeflex.css"]
+            "styles": ["src/styles.css"]
           }
         }
       }
